@@ -1,5 +1,9 @@
 2000-05-09  Christopher James Lahey  <clahey@helixcode.com>
 
+	* art/Makefile.am: Added briefcase.png to get installed.
+
+2000-05-09  Christopher James Lahey  <clahey@helixcode.com>
+
 	* widgets/e-text/e-text.c: Remove the tooltip callback when
 	destroyed.
 
